añadimos target_blank a los enlaces

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    <nav class="navegacion">
        <ul>
            <li><a href="./banner/banner.html" target="_blank">BANNER</a></li>
-           <li><a href="./footer/footer.html">FOOTER</a></li>
-           <li><a href="./header/header.html">HEADER</a></li>
-           <li><a href="./zigzag/zigzag.html">ZIGZAG</a></li>
+           <li><a href="./footer/footer.html"  target="_blank">FOOTER</a></li>
+           <li><a href="./header/header.html"  target="_blank">HEADER</a></li>
+           <li><a href="./zigzag/zigzag.html"  target="_blank">ZIGZAG</a></li>
        </ul>
    </nav> 
 </body>
